--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,16 @@
 * {
     border-spacing: border-box;
     font-family: 'Cousine', monospace;
+    background:#FFFCE8;
+    color:#DD403A;
+    
 }
 
-:root {
-    --dark-color: #384E62;
-    --mid-color: #5A738B;
-    --light-color: #D6F1F7;
-}
+
 
 .app {
     margin: 0 auto;
     max-width: 1000px;
-    background: var(--mid-color);
-    color: var(--light-color);
     display: flex;
     flex-direction: column;
 }
@@ -31,11 +28,8 @@ p {
     font-size: 24px;
 }
 
-.list {
-    background-color: var(--dark-color);
-    margin: 25px 5%;
-    padding: 40px 5%;
-}
+
+
 
 .form {
     margin: 0px 5%;
@@ -47,11 +41,12 @@ input {
     margin: 10px 2%;
     padding: 10px 2%;
     border-radius:10px;
+    background:#FFFCE8;
 }
 
 input[type=submit] {
-    background-color: var(--dark-color);
-    color: var(--light-color);
+    background-color: #731DD8 ;
+    color:#FFFCE8 ;
 }
 
 button {
@@ -59,12 +54,7 @@ button {
     margin: 10px 2%;
     padding: 10px 2%;
     border-radius:10px;
-    background-color: var(--dark-color);
-    color: var(--light-color);
+    background-color:#731DD8 ;
+    color: #FFFCE8;
 }
 
-img {
-    max-width: 519px;
-    height: auto;
-    align-self: center;
-}
