--- a/src/App.css
+++ b/src/App.css
@@ -57,4 +57,8 @@ button {
     background-color:#731DD8 ;
     color: #FFFCE8;
 }
+.search-bar {
+    margin: 0px 5%;
+    padding: 5px 5% 0px 5%;
+} 
 
